--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     font-size: 30px;
     justify-content: center;
     align-items: center;
-    gap: 200px
+    gap: 60px;
 }
 
 #popup {
